topic-ms-00003: InaccessibleObjectException 수정용 VMOPTS 추가.